Improved reports of backtesting (untested)